--- a/docker/development/conf/supervisord.conf
+++ b/docker/development/conf/supervisord.conf
@@ -30,3 +30,12 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_events_enabled=true
 stderr_events_enabled=true
+
+[program:memcached]
+command=/usr/bin/memcached -p 11211 -u www-data -m 256 -c 1024 -t 4
+autostart=true
+autorestart=true
+user=root
+priority=100
+redirect_stderr=true
+stdout_logfile=/var/log/memcached.log
