Sorting by the sum of the vests of all followers for each account

--- a/docker/history/steemdb_history.service
+++ b/docker/history/steemdb_history.service
@@ -4,7 +4,7 @@ Description=SteemDB.com History Service
 [Service]
 Environment=steemnode=node.steem.ws
 WorkingDirectory=/var/www/com_steemdb/docker/history
-ExecStart=/usr/bin/python3 fix.py
+ExecStart=/usr/bin/python3 history.py
 Restart=always
 
 [Install]
