--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "require": {
     "mongodb/mongodb": "^1.0.0",
     "phalcon/incubator": "~3.0",
-    "michelf/php-markdown": "~1.6.0",
     "fguillot/json-rpc": "^1.2",
-    "ezyang/htmlpurifier": "~4.8.0"
+    "ezyang/htmlpurifier": "~4.8.0",
+    "league/commonmark": "^0.11"
   }
 }
