--- a/docker/development/Dockerfile
+++ b/docker/development/Dockerfile
@@ -2,7 +2,6 @@ FROM ubuntu:16.04
 
 ENV php_conf /etc/php/7.0/fpm/php.ini
 ENV fpm_conf /etc/php/7.0/fpm/php-fpm.conf
-ENV composer_hash 55d6ead61b29c7bdee5cccfb50076874187bd9f21f65d8991d46ec5cc90518f447387fb9f76ebae1fbbacf329e583e30
 
 RUN apt-get update && apt-get install -y software-properties-common python-software-properties
 
@@ -40,10 +39,22 @@ RUN apt-get install -y bash \
     mkdir -p /run/nginx && \
     mkdir -p /var/log/supervisor
 
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
-    php -r "if (hash_file('SHA384', 'composer-setup.php') === '${composer_hash}') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
-    php composer-setup.php --install-dir=/usr/bin --filename=composer && \
-    php -r "unlink('composer-setup.php');"
+    ENV COMPOSER_ALLOW_SUPERUSER 1
+    ENV COMPOSER_HOME /tmp
+    ENV COMPOSER_VERSION 1.7.2
+
+    RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url https://raw.githubusercontent.com/composer/getcomposer.org/b107d959a5924af895807021fcef4ffec5a76aa9/web/installer \
+     && php -r " \
+        \$signature = '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061'; \
+        \$hash = hash('SHA384', file_get_contents('/tmp/installer.php')); \
+        if (!hash_equals(\$signature, \$hash)) { \
+            unlink('/tmp/installer.php'); \
+            echo 'Integrity check failed, installer is either corrupt or worse.' . PHP_EOL; \
+            exit(1); \
+        }" \
+     && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
+     && composer --ansi --version --no-interaction \
+     && rm -rf /tmp/* /tmp/.htaccess
 
 # nginx site conf
 RUN mkdir -p /etc/nginx/sites-available/ && \
